# OpenBiologist

./: README.md  app.py  pyproject.toml  requirements.txt  run_openbiologist.sh
src/: __init__.py
src/auth/: bearer_provider.py
src/backend/: client.py  config.py  main.py
src/fold_models/: __init__.py
src/fold_models/esmfold/: __init__.py  main.py
src/fold_models/esmfold/internal/: loss.py  protein_utils.py  residue_constants.py  structure.py  trunk.py  utils.py
src/fold_models/esmfold/internal/modules/: attention.py  chunk.py  geometry.py  geometry_utils.py  misc.py  primitives.py  utils.py
src/services/: boltz_adapter.py  local_protein_predictor.py  mcp_server.py  protein_predictor.py  validation.py
src/tools/: bio_database_search.py  image_processor.py  job_finder.py  mcp_tools.py  protein_predictor.py
src/utils/: fasta.py  fetch.py  models.py  pdb_visualizer.py
