[project]
name = "openbiologist"
version = "0.1.0"
description = "OpenBiologist MCP Server for biological research via WhatsApp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastmcp>=2.11.2",
    "markdownify>=1.1.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "readabilipy>=0.3.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]
