[project]
name = "openbiologist"
version = "0.1.0"
description = "OpenBiologist MCP Server for biological research via WhatsApp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastmcp>=2.11.2",
    "markdownify>=1.1.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "readabilipy>=0.3.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "fastapi",
    "uvicorn==0.24.0",
    "fair-esm>=2.0.0",
    "biopython==1.79",
    "biotite>=0.38.0",
    "SQLAlchemy>=2.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "dm-tree>=1.1.0",
    "einops>=0.6.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "fair-esm>=0.3.0",
]
